--- a/Interchange_v2/Content/Site.css
+++ b/Interchange_v2/Content/Site.css
@@ -2,23 +2,29 @@
     padding-top: 50px;
     padding-bottom: 20px;
 }
+/*.body-fluid {
+  margin-right: unset;
+  margin-left: unset;
+  max-width: unset; /* or 950px */
+}*/
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: unset;
+    padding-right: unset;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
-.dl-horizontal dt {
+/*.dl-horizontal dt {
     white-space: normal;
-}
+}*/
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
-}
+}*/
+
